<resources>
    <string name="app_name">Car Parking</string>
    <string name="checkIn">Check-In</string>
    <string name="checkOut">Check-Out</string>
    <string name="duration">Duration</string>
    <string name="vehicleNo">Vehicle No.</string>
    <string name="change">Change</string>
    <string name="next">Next</string>
    <string name="save_report">Save Report</string>
    <string name="addVehicle">Add Vehicle</string>
    <string name="title_activity_my_vehicle">My Vehicle</string>
    <string name="card">Card</string>
    <string name="add_payment">Add Payment Card</string>
    <string name="others">Others</string>
    <string name="barter">Barter</string>
    <string name="paystack">M-pesa</string>
    <string name="promotions">Promotions</string>
    <string name="add_promo_code">Get Promo Code</string>
    <string name="show_qr">Show QR code at parking Lot</string>
    <string name="qr_code">QR CODE</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="booking_id">Booking ID</string>
    <string name="id_">#000000</string>
    <string name="parking_slot">Parking Slot</string>
    <string name="slot_">Floor XX Section XX Lane XX</string>
    <string name="from">From</string>
    <string name="date">Sun, 20 Oct.</string>
    <string name="get_direction">Get direction</string>
    <string name="time_to">10:00 AM</string>
    <string name="to">To</string>
    <string name="time_t">10:00 AM</string>
    <string name="vehicle">Vehicle</string>
    <string name="lexus_rx330">   </string>
    <string name="lng122bw"> </string>
    <string name="promo_code"><font size="16">Promo Code</font></string>
    <string name="enter_the_promo_code_and_it_will_be_applied_to_your_next_parking_reservation">Enter the promo code and it will be applied\n to your next parking reservation</string>
    <string name="apply">Apply</string>
    <string name="car_park_name">Car Park Name</string>
    <string name="amount">Amount</string>
    <string name="back">Back</string>
    <string name="facebook_app_id">2687903551262284</string>
    <string name="fb_login_protocol_scheme">fb2687903551262284</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_maps">Map</string>
    <string name="where_would_you_love_to_park">Where would you love to park?</string>

    <string name="about_app">Car Park application allows you find parking in seconds, wherever and whenever \n you need it, with millions of options at your \n finger tips via rated application.
                                \n \n From work journeys to weekend trips, shopping to \n sport stadiums even parties, we have got you covered - with
                                \n directions to car parks and on-street spaces, plus information on availability and restrictions.
                                \n \n And for maximum peace of mind? Choose one of our numerous reservable locations - then simply
                                \n \n park and get on with your day</string>
    <string name="enter_the_4_digit_code_sent">Enter the 4-Digit code sent</string>
    <string name="enter_name">Enter Name</string>
    <string name="continueButton">Continue</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="edit">Edit</string>
    <string name="car_plate_number">Car Plate Number</string>
    <string name="car_make">Car Make and Model</string>
    <string name="main_ride">This is my main ride.</string>
    <string name="button.save">Save</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="tap_here_to_select">Tap here to select</string>
    <string name="hint">0757913481</string>
    <string name="phone_number">M-Pesa phone number 07..</string>
    <string name="check_out">Check Out</string>
    <string name="admin">Administrator</string>
    <string name="email">Email</string>
    <string name="generate_report">Generate Report</string>
    <string name="slot_number">SLOT 1</string>
    <string name="occupant">Paul Karanja</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="no_occupied_slots">No Occupied Slots</string>
    <string name="payment">Ksh.200</string>
    <string name="payment_txt">Payment</string>
    <string name="no_reports">No Reports Available</string>
    <string name="register_now">Register now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>


</resources>
