<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"

        android:focusable="true"
        android:visibility="visible"
        app:cardBackgroundColor="#F4F3F3"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/slot_number_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:text="@string/slot_number"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/occupant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="5dp"
                android:text="@string/occupant"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slot_number_item" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.68" />
            <TextView
                android:id="@+id/from_text"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:text="@string/from"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/occupant" />

            <TextView
                android:id="@+id/from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/from_text"
                app:layout_constraintTop_toBottomOf="@+id/from_text" />

            <TextView
                android:id="@+id/from_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_to"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/from_date"
                app:layout_constraintTop_toBottomOf="@+id/from_date" />


            <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#888888"
                app:layout_constraintBottom_toBottomOf="@+id/to_date"
                app:layout_constraintEnd_toStartOf="@+id/to_date"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/from_date"
                app:layout_constraintTop_toTopOf="@+id/to_date" />


            <TextView
                android:id="@+id/to_text"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"

                android:text="@string/to"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/occupant" />

            <TextView
                android:id="@+id/to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/to_text"
                app:layout_constraintTop_toBottomOf="@+id/to_text" />

            <TextView
                android:id="@+id/to_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_t"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/to_date"
                app:layout_constraintTop_toBottomOf="@+id/to_date" />
            <TextView
                android:id="@+id/payment_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_txt"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/from_time"
                app:layout_constraintTop_toBottomOf="@+id/to_time" />
            <TextView
                android:id="@+id/payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/payment_txt"
                app:layout_constraintTop_toBottomOf="@+id/payment_txt" />

            <View
                android:id="@+id/spacer"
                android:layout_width="wrap_content"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:background="@color/browser_actions_title_color"
                app:layout_constraintStart_toStartOf="@+id/payment"
                app:layout_constraintTop_toBottomOf="@+id/payment"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>
</LinearLayout>