<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:text="@string/checkIn"
            android:textAlignment="textStart"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:text=""
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_change_checkIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:onClick="checkIn"
            android:text="@string/change"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/browser_actions_title_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:text="@string/checkOut"
            android:textAlignment="textStart"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:text=""
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_change_checkOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:onClick="checkOut"
            android:text="@string/change"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/browser_actions_title_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:text="@string/duration"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:text=""
            android:textAlignment="textEnd"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/browser_actions_title_color" />
    <LinearLayout
        android:id="@+id/phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="Payable Amount" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:hint="@string/hint"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:inputType="phone"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/com_facebook_button_background"
        android:fontFamily="@font/nunito"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
